# rtic-test

./: Cargo.toml  ariane.x  connect-and-load.gdb
.cargo/: config.toml
src/: main.rs
